# dlwpt-code-2e

./: .gitignore  README.md  pyproject.toml  requirements.txt
runs/Mar10_22-18-00_K2208N0006051/: events.out.tfevents.1741659480.K2208N0006051.5156.0
runs/Mar10_22-18-37_K2208N0006051/: events.out.tfevents.1741659517.K2208N0006051.5156.1
runs/p2ch12/2024-11-22_20.17.11-trn_cls-dwlpt/: events.out.tfevents.1732324805.K2208N0006051.30740.0
runs/p2ch12/2024-11-22_20.17.11-val_cls-dwlpt/: events.out.tfevents.1732324805.K2208N0006051.30740.1
runs/p2ch12/2024-11-22_20.24.02-trn_cls-dwlpt/: events.out.tfevents.1732325086.K2208N0006051.26552.0
runs/p2ch12/2024-11-22_20.24.02-val_cls-dwlpt/: events.out.tfevents.1732325086.K2208N0006051.26552.1
runs/p2ch12/2024-11-24_17.08.50-trn_cls-dwlpt/: events.out.tfevents.1732486181.K2208N0006051.19068.0
runs/p2ch12/2024-11-24_17.08.50-val_cls-dwlpt/: events.out.tfevents.1732486181.K2208N0006051.19068.1
runs/p2ch12/2024-11-25_10.56.53-trn_cls-dwlpt/: events.out.tfevents.1732550263.K2208N0006051.18956.0
runs/p2ch12/2024-11-25_10.56.53-val_cls-dwlpt/: events.out.tfevents.1732550263.K2208N0006051.18956.1
runs/p2ch12/2024-12-04_20.37.17-trn_cls-dwlpt/: events.out.tfevents.1733362694.K2208N0006051.32876.0
runs/p2ch12/2024-12-04_20.37.17-val_cls-dwlpt/: events.out.tfevents.1733362694.K2208N0006051.32876.1
runs/p2ch13/2024-11-17_16.14.46-trn_cls-dwlpt/: events.out.tfevents.1731881230.K2208N0006051.17520.0
runs/p2ch13/2024-11-17_16.14.46-val_cls-dwlpt/: events.out.tfevents.1731881230.K2208N0006051.17520.1
(+5 files in other folders)
